--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -6,7 +6,7 @@
     <title>Judul Halaman</title>
 </head>
 <body>
-    <header>
+</header>
     <h1></h1>
         <nav>
             <ul>
@@ -17,17 +17,17 @@
     </nav>
     </header>
     <main>
-        <section>
-        <h2></h2>
-        <p></p>
+        <section id="home">
+        <h2>Selamat Datang</h2>
+        <p>Ini contoh paragraf HTML.</p>
     </section>
-    <section>
-        <h2></h2>
-        <p></p>
+    <section id="about">
+        <h2>Tentang Kami</h2>
+        <p>HTML digunakan untuk membuat struktur halaman web.</p>
+    </section>
+    <section id="contact">
+    <h2>Kontak Kami</h2>
+        <p>contoh form</p>
     </section>
     </main>
-    <footer>
-        <p></p>
-    </footer>
-</body>
-</html>
+<footer>
