--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -22,7 +22,17 @@
         <p>Ini contoh paragraf HTML.</p>
     </section>
     <section id="about">
-        <h2>Tentang Kami</h2>
+        <h2>Tentang Saya</h2>
+        <p><strong>NIM:</strong> 2511500084</p>
+        <p><strong>Nama Lengkap:</strong> Salsabillah Rimadany &#128526;</p>
+        <p><strong>Tempat Lahir:</strong> Bangka</p>
+        <p><strong>Tanggal Lahir:</strong> 20 Maret 2006</p>
+        <p><strong>Hobi:</strong> Memasak, membaca novel, berpetualang, dan mendengarkan musik &#127926;</p>
+        <p><strong>Pasangan:</strong> Belum ada &hearts;</p>
+        <p><strong>Pekerjaan:</strong> Mahasiswa &copy; 2025</p>
+        <p><strong>Nama Orang Tua:</strong> Bapak Ramdhani dan Ibu Sri Sudarmi</p>
+        <p><strong>Nama Kakak:</strong> Amellia Febriani dan Muhammad Ramsey</p>
+        <P><strong>Nama Adik:</strong> Tidak punya adik</P>
         <p>HTML digunakan untuk membuat struktur halaman web.</p>
     </section>
     <section id="contact">
