--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Judul Halaman</title>
 </head>
 <body>
-    <header>
+</header>
     <h1></h1>
         <nav>
             <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="#home">Beranda</a></li>
+            <li><a href="#about">Tentang</a></li>
+            <li><a href="#contact">Kontak</a></li>
         </ul>
     </nav>
     </header>
     <main>
-        <section>
-        <h2></h2>
-        <p></p>
+        <section id="home">
+        <h2>Selamat Datang</h2>
+        <p>Ini contoh paragraf HTML.</p>
     </section>
-    <section>
-        <h2></h2>
-        <p></p>
+    <section id="about">
+        <h2>Tentang Saya</h2>
+        <p><strong>NIM:</strong> 2511500084</p>
+        <p><strong>Nama Lengkap:</strong> Salsabillah Rimadany &#128526;</p>
+        <p><strong>Tempat Lahir:</strong> Bangka</p>
+        <p><strong>Tanggal Lahir:</strong> 20 Maret 2006</p>
+        <p><strong>Hobi:</strong> Memasak, membaca novel, berpetualang, dan mendengarkan musik &#127926;</p>
+        <p><strong>Pasangan:</strong> Belum ada &hearts;</p>
+        <p><strong>Pekerjaan:</strong> Mahasiswa &copy; 2025</p>
+        <p><strong>Nama Orang Tua:</strong> Bapak Ramdhani dan Ibu Sri Sudarmi</p>
+        <p><strong>Nama Kakak:</strong> Amellia Febriani dan Muhammad Ramsey</p>
+        <P><strong>Nama Adik:</strong> Tidak punya adik</P>
+        <p>HTML digunakan untuk membuat struktur halaman web.</p>
+    </section>
+    <section id="contact">
+    <h2>Kontak Kami</h2>
+        <p>contoh form</p>
     </section>
     </main>
-    <footer>
-        <p></p>
-    </footer>
+<footer>
+    <p>&copy; 2025 Salsabiilah Rimadany [2511500084]</p>
+</footer>
 </body>
-</html>
