form section contact

--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -24,10 +24,10 @@
     <section id="about">
         <h2>Tentang Saya</h2>
         <p><strong>NIM:</strong> 2511500084</p>
-        <p><strong>Nama Lengkap:</strong> Salsabillah Rimadany &#128526;</p>
+        <p><strong>Nama Lengkap:</strong> Salsabillah Rimadany</p>
         <p><strong>Tempat Lahir:</strong> Bangka</p>
         <p><strong>Tanggal Lahir:</strong> 20 Maret 2006</p>
-        <p><strong>Hobi:</strong> Memasak, membaca novel, berpetualang, dan mendengarkan musik &#127926;</p>
+        <p><strong>Hobi:</strong> Memasak, membaca novel, berpetualang, dan mendengarkan musik</p>
         <p><strong>Pasangan:</strong> Belum ada &hearts;</p>
         <p><strong>Pekerjaan:</strong> Mahasiswa &copy; 2025</p>
         <p><strong>Nama Orang Tua:</strong> Bapak Ramdhani dan Ibu Sri Sudarmi</p>
