--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -29,6 +29,15 @@
     padding: 6px 0;
     border-bottom: 1px solid #e6e6e6;
   }
+
+  #about p strong {
+    min-width: 180px;
+    color: #003366;
+    font-weight: 600;
+    text-align: right;
+    padding-right: 16px;
+    flex-shrink: 0;
+  }
 </style>
 </head>
 <body>
