--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -93,8 +93,8 @@
         <input type="text" id="txtNama" name="txtNama" placeholder="Masukan nama lengkap" required>
 
         <label for="rdoGenderL">Jenis Kelamin:</label>
-        <input type="radio" id="rdoGenderL" name="rdoGenderL" value="L" checked> Laki-laki
-        <inputtype="radio" id="rdoGenderP" name="rdoGenderP" value="P"> Perempuan
+        <input type="radio" id="rdoGenderL" name="rdoGenderL" value="L"> Laki-laki
+        <input type="radio" id="rdoGenderP" name="rdoGenderP" value="P" checked> Perempuan
 
         <label for="cbHobi1"></label>
         <input type="checkbox" id="cbHobi1" name="cbHobi[]" value="Mendengarkan musik" checked> Mendengarkan musik
