--- a/index.html
+++ b/index.html
@@ -1,25 +1,13 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
+
 <html lang="id">
  <head>
     <meta charset="UTF-8">
-    <title>Dasar <HTML5</title>
+    <title>Dasar HTML5</title>
  </head>
  <body>
     <h1>Hello World</h1>
     <p>Ini contoh penulisan halaman HTML5 minimalis tanpa header/main/footer.</p>
  </body>
 </html>
-=======
-<!DOCTYPE html>
-<html lang="id">
- <head>
-    <meta charset="UTF-8">
-    <title>Dasar <HTML5</title>
- </head>
- <body>
-    <h1>Hello World</h1>
-    <p>Ini contoh penulisan halaman HTML5 minimalis tanpa header/main/footer.</p>
- </body>
-</html>
->>>>>>> 34ddb75f4aaecf6835fc676773318526d32b6491
+
