--- a/pertemuan-04/.index.html
+++ b/pertemuan-04/.index.html
@@ -95,8 +95,6 @@
     <section id="contact">
     <h2>Kontak Kami</h2>
     <form action="" method="GET">
-        <fieldset>
-            <legend>Data Mahasiswa</legend>
 
         <label for="txtNama">Nama:</label>
         <input type="text" id="txtNama" name="txtNama" placeholder="Masukan nama lengkap" required autocomplete="name">
@@ -104,7 +102,7 @@
         <label for="txtEmail"Email:</label>
             <input type="email" id="txtEmail" name="txtEmail" placeholder="Masukan email" required autocomplete="email">
 
-        <label for="txtPesan">Pesan</label>
+        <label for="txtPesan">Pesan:</label>
         <textarea id="txtPesan" name="=txtPesan" rows="4" placeholder="Tulis pesan anda..." required></textarea>
     
         <button type="submit">Kirim</button>
