--- a/pertemuan-04/index.html
+++ b/pertemuan-04/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Judul Halaman</title>
 <style>
-  #about {
+  #about,
+  #contact {
     background-color: #ffffff;
     border-radius: 10px;
     padding: 20px;
@@ -14,15 +15,9 @@
     margin: 20px auto;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
-  
-  #contact {
-    background-color: #ffffff;
-    border-radius: 10px;
-    padding: 20px;
-    margin: 20px auto;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  }
-  #about h2 {
+
+  #about h2,
+  #contact h2 {
     color: #003366;
     border-bottom: 2px solid #003366;
     padding-bottom: 6px;
