--- a/pertemuan-04/index.html
+++ b/pertemuan-04/index.html
@@ -2,112 +2,175 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Judul Halaman</title>
-<style>
-  #about,
-  #contact {
-    background-color: #ffffff;
-    border-radius: 10px;
-    padding: 20px;
-    max-width: 700px;
-    margin: 20px auto;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tentang Salsabillah/title>
+  <style>
+    #about,
+    #Contact {
 
-  #about h2,
-  #contact h2 {
-    color: #003366;
-    border-bottom: 2px solid #003366;
-    padding-bottom: 6px;
-    margin-top: 0;
-    margin-bottom: 16px;
-  }
-  #about p {
-    display: flex;
-    justify-content: flex-start;
-    align-items: baseline;
-    margin: 0;
-    padding: 6px 0;
-    border-bottom: 1px solid #e6e6e6;
-  }
+      background-color: #ffffff;
+      border-radius: 10px;
+      padding: 20px;
+      max-width: 700px;
+      margin: 20px auto;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
 
-  #about p strong {
-    min-width: 180px;
-    color: #003366;
-    font-weight: 600;
-    text-align: right;
-    padding-right: 16px;
-    flex-shrink: 0;
-  }
+    #about h2,
+    #Contact h2 {
+      color: #003366;
+      border-bottom: 2px solid #003366;
+      padding-bottom: 6px;
+      margin-top: 0;
+      margin-bottom: 16px;
+    }
 
-  @media (max-width: 600px) {
-    #about p {
+    #about p,
+    #Contact label {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      margin: 0;
+      padding: 6px 0;
+      border-bottom: 1px solid #e6e6e6;
+    }
+
+    #about strong,
+    #Contact label>span {
+      min-width: 180px;
+      color: #003366;
+      font-weight: 600;
+      text-align: right;
+      padding-right: 16px;
+      flex-shrink: 0;
+    }
+
+    #Contact input,
+    #Contact textarea {
+      flex: 1;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      padding: 8px;
+      color: #000;
+      font-weight: normal;
+      margin: 0;
+      box-sizing: border-box;
+      font-family: Arial, sans-serif;
+    }
+
+    #Contact button {
+      margin-top: 10px;
+      display: inline-block;
+      padding: 10px 24px;
+      font-size: 16px;
+      border-radius: 6px;
+      cursor: pointer;
+      border: none;
+      transition: all 0.3s ease;
+      margin-right: 8px;
+    }
+
+    #Contact button[type="submit"] {
+      background-color: #003366;
+      color: #fff;
+      font-weight: 600;
+    }
+
+    #Contact button[type="reset"] {
+      background-color: #b4b4b4;
+      color: #272727;
+      font-weight: 500;
+    }
+
+    #Contact button[type="submit"]:hover {
+      background-color: #0379ee;
+      transform: translateY(-1px);
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    }
+
+    #Contact button[type="reset"]:hover {
+      background-color: #cccccc;
+      transform: translateY(-1px);
+    }
+
+    @media (max-width: 600px) {
+
+      #about p,
+      #Contact label {
         flex-direction: column;
         align-items: flex-start;
-    }
+      }
 
-    #about strong {
+      #about strong,
+      #Contact label>span {
         text-align: left;
         padding-right: 0;
-        margin-bottom: 2px;
+        margin-bottom: 4px;
+      }
+
+      #Contact input,
+      #Contact textarea,
+      #Contact button {
+        width: 100%;
+      }
     }
-  }
-</style>
+  </style>
+
+
 </head>
 
 <body>
-</header>
+  <header>
     <h1>Ini Header</h1>
-        <nav>
-            <ul>
-            <li><a href="#home">Beranda</a></li>
-            <li><a href="#about">Tentang</a></li>
-            <li><a href="#contact">Kontak</a></li>
-        </ul>
+    <nav>
+      <ul>
+        <li><a href="#home">Beranda</a></li>
+        <li><a href="#about">Tentang</a></li>
+        <li><a href="#Contact">Kontak</a></li>
+      </ul>
     </nav>
-    </header>
-    <main>
-        <section id="home">
-        <h2>Selamat Datang</h2>
-        <p>Ini contoh paragraf HTML.</p>
+  </header>
+  <main>
+    <section id="home">
+      <h2>Selamat datang</h2>
+      <p>Ini contoh paragraf HTML.</p>
     </section>
     <section id="about">
-        <h2>Tentang Saya</h2>
-        <p><strong>NIM:</strong> 2511500084</p>
-        <p><strong>Nama Lengkap:</strong> Salsabillah Rimadany &#128526;</p>
-        <p><strong>Tempat Lahir:</strong> Bangka</p>
-        <p><strong>Tanggal Lahir:</strong> 20 Maret 2006</p>
-        <p><strong>Hobi:</strong> Memasak, membaca novel, berpetualang, dan mendengarkan musik &#127926;</p>
-        <p><strong>Pasangan:</strong> Belum ada &hearts;</p>
-        <p><strong>Pekerjaan:</strong> Mahasiswa &copy; 2025</p>
-        <p><strong>Nama Orang Tua:</strong> Bapak Ramdhani dan Ibu Sri Sudarmi</p>
-        <p><strong>Nama Kakak:</strong> Amellia Febriani dan Muhammad Ramsey</p>
-        <P><strong>Nama Adik:</strong> Tidak punya adik</P>
-        <p>HTML digunakan untuk membuat struktur halaman web.</p>
+      <h2>Tentang Saya</h2>
+      <p><strong>NIM:</strong> 2511500084.</p>
+      <p><strong>Nama Lengkap:</strong> Salsabillah Rimadany #128526;</p>
+      <p><strong>Tempat Lahir:</strong> Bamgka</p>
+      <p><strong>Tanggal Lahir:</strong> 20 Maret 2006</p>
+      <p><strong>Hobi:</strong> Memasak, Membaca Novel, Mendengarkan Musik &#127926;</p>
+      <p><strong>Pasangan:</strong> Belum ada &hearts;</p>
+      <P><strong>Pekerjaan:</strong> Mahasiswa &copy; 2025</P>
+      <p><strong>Nama Orang Tua</strong> Bapak Ramdhani dan Ibu Sri Sudarmi</p>
+      <p><strong>Nama Kakak:</strong> Amellia Febriani dan Muhammad Ramsey</p>
+      <p><strong>Nama Adik:</strong> Tidak Ada</p>
     </section>
-    <section id="contact">
-    <h2>Kontak Kami</h2>
-    <form action="" method="GET">
-
-        <label for="txtNama">Nama:</label>
-        <input type="text" id="txtNama" name="txtNama" placeholder="Masukan nama lengkap" required autocomplete="name">
-
-        <label for="txtEmail"Email:</label>
-            <input type="email" id="txtEmail" name="txtEmail" placeholder="Masukan email" required autocomplete="email">
-
-        <label for="txtPesan">Pesan:</label>
-        <textarea id="txtPesan" name="=txtPesan" rows="4" placeholder="Tulis pesan anda..." required></textarea>
-    
-        <button type="submit">Kirim</button>
-        <button type="reset">Batal</button>
-    </form>
-    </section>
-    </main>
-<footer>
-    <p>&copy; 2025 Salsabiilah Rimadany [2511500084]</p>
-</footer>
+    <section id="Contact">
+      <section id="contact">
+        <h2>Kontak Kami</h2>
+        <form action="" method="GET">
+          <label for="txtNama"><span>Nama:</span>
+            <input type="text" id="txtNama" name="txtNama" placeholder="Masukkan nama" required autocomplete="name">
+          </label>
+          <label for="txtEmail"><span>Email:</span>
+            <input type="email" id="txtEmail" name="txtEmail" placeholder="Masukkan email" required
+              autocomplete="email">
+          </label>
+          <label for="txtPesan"><span>Pesan Anda:</span>
+            <textarea id="txtPesan" name="txtPesan" rows="4" placeholder="Tulis pesan anda..." required></textarea>
+          </label>
+          <button type="submit">Kirim</button>
+          <button type="reset">Batal</button>
+        </form>
+      </section>
+  </main>
+  <footer>
+    <p>&copy; 2025 Salsabillah Rimadany [2511500084]</p>
+  </footer>
 </body>
 
 </html>
