--- a/pertemuan-04/index.html
+++ b/pertemuan-04/index.html
@@ -138,9 +138,9 @@
     </section>
     <section id="about">
       <h2>Tentang Saya</h2>
-      <p><strong>NIM:</strong> 2511500084.</p>
-      <p><strong>Nama Lengkap:</strong> Salsabillah Rimadany #128526;</p>
-      <p><strong>Tempat Lahir:</strong> Bamgka</p>
+      <p><strong>NIM:</strong> 2511500084</p>
+      <p><strong>Nama Lengkap:</strong> Salsabillah Rimadany</p>
+      <p><strong>Tempat Lahir:</strong> Bangka</p>
       <p><strong>Tanggal Lahir:</strong> 20 Maret 2006</p>
       <p><strong>Hobi:</strong> Memasak, Membaca Novel, Mendengarkan Musik &#127926;</p>
       <p><strong>Pasangan:</strong> Belum ada &hearts;</p>
