section#contact styling input, textarea, button

--- a/pertemuan-04/index.html
+++ b/pertemuan-04/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tentang Salsabillah</title>
-  <style>
+<style
     #about,
     #Contact {
 
@@ -94,7 +94,12 @@
       transform: translateY(-1px);
     }
 
-    @media (max-width: 600px) {
+    @media (max-width: 600px) { ... }
+    #contact input,
+    #contact textarea,
+    #contact button {
+      width: 100%;
+    }
 
       #about p,
       #Contact label {
