--- a/pertemuan-04/index.html
+++ b/pertemuan-04/index.html
@@ -4,125 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tentang Salsabillah</title>
-<style>
-    #about,
-    #Contact {
-
-      background-color: #ffffff;
-      border-radius: 10px;
-      padding: 20px;
-      max-width: 700px;
-      margin: 20px auto;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-
-    #about h2,
-    #Contact h2 {
-      color: #003366;
-      border-bottom: 2px solid #003366;
-      padding-bottom: 6px;
-      margin-top: 0;
-      margin-bottom: 16px;
-    }
-
-    #about p,
-    #Contact label {
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      margin: 0;
-      padding: 6px 0;
-      border-bottom: 1px solid #e6e6e6;
-    }
-
-    #about strong,
-    #Contact label>span {
-      min-width: 180px;
-      color: #003366;
-      font-weight: 600;
-      text-align: right;
-      padding-right: 16px;
-      flex-shrink: 0;
-    }
-
-    #Contact input,
-    #Contact textarea {
-      flex: 1;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      padding: 8px;
-      color: #000;
-      font-weight: normal;
-      margin: 0;
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
-    }
-
-    #Contact button {
-      margin-top: 10px;
-      display: inline-block;
-      padding: 10px 24px;
-      font-size: 16px;
-      border-radius: 6px;
-      cursor: pointer;
-      border: none;
-      transition: all 0.3s ease;
-      margin-right: 8px;
-    }
-
-    #Contact button[type="submit"] {
-      background-color: #003366;
-      color: #fff;
-      font-weight: 600;
-    }
-
-    #Contact button[type="reset"] {
-      background-color: #b4b4b4;
-      color: #272727;
-      font-weight: 500;
-    }
-
-    #Contact button[type="submit"]:hover {
-      background-color: #0379ee;
-      transform: translateY(-1px);
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-    }
-
-    #Contact button[type="reset"]:hover {
-      background-color: #cccccc;
-      transform: translateY(-1px);
-    }
-
-    @media (max-width: 600px) {
-    #contact input,
-    #contact textarea,
-    #contact button {
-      width: 100%;
-    }
-
-      #about p,
-      #Contact label {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      #about strong,
-      #Contact label>span {
-        text-align: left;
-        padding-right: 0;
-        margin-bottom: 4px;
-      }
-
-      #Contact input,
-      #Contact textarea,
-      #Contact button {
-        width: 100%;
-      }
-    }
-  </style>
-
-
+  <title>Tentang Salsabillah Rimadany</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -147,8 +30,8 @@
       <p><strong>Nama Lengkap:</strong> Salsabillah Rimadany</p>
       <p><strong>Tempat Lahir:</strong> Bangka</p>
       <p><strong>Tanggal Lahir:</strong> 20 Maret 2006</p>
-      <p><strong>Hobi:</strong> Memasak, Membaca Novel, Mendengarkan Musik &#127926;</p>
-      <p><strong>Pasangan:</strong> Belum ada &hearts;</p>
+      <p><strong>Hobi:</strong> Memasak, Membaca Novel, dan Mendengarkan Musik &#128526;</p>
+      <p><strong>Pasangan:</strong> Belum Ada &hearts;</p>
       <P><strong>Pekerjaan:</strong> Mahasiswa &copy; 2025</P>
       <p><strong>Nama Orang Tua</strong> Bapak Ramdhani dan Ibu Sri Sudarmi</p>
       <p><strong>Nama Kakak:</strong> Amellia Febriani dan Muhammad Ramsey</p>
