membuat script.js

--- a/pertemuan-05/index.html
+++ b/pertemuan-05/index.html
@@ -62,6 +62,8 @@
   <footer>
     <p>&copy; 2025 Salsabillah Rimadany [2511500084]</p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
